[project]
name = "cubase-manager"
version = "1.2.0"
description = "Cuba"
requires-python = ">=3.11"
tool = {text = "MIT"}

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py311"
